member size update

--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -11,60 +11,23 @@
     <div class="accelerator-control">Accelerator Control</div>
   </div>
 
-  <div style="height:100px"></div>
+  <div style="height:50px"></div>
 
-  <div id="title">Accelerator Control Team</div>
+  <div style="width: 1920px; height: 50px; margin: auto; text-align: center; font-size: 44px; color: white">
+    Accelerator Control Team
+  </div>
 
-  <div id="body" style="margin:auto; position:relative; width:1920px; height:750px; display: flex;">
+  <div id="body" style="width:1920px; height:900px; display: flex;">
     <!-- <div style="height:100px; background-color:aqua"></div> -->
 
+    <!-- Lee SangIl -->
     <div class="card">
       <div class="topleft"></div>
-
       <img class="avatar" src="images/profile-image.svg">
-      <div class="name">Son, Changwook</div>
-      <div class="charge">Senior Enginner</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
-      <div class="location">Control Lab. Room 1</div>
-      <div class="email">scwook@ibs.re.kr</div>
-      <div class="phone">042-878-8831</div>
-    </div>
-
-    <div class="card">
-      <div class="topleft"></div>
-
-      <img class="avatar" src="images/profile-image.svg">
-      <div class="name">Son, Changwook</div>
-      <div class="charge">Senior Enginner</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
-      <div class="location">Control Lab. Room 1</div>
-      <div class="email">scwook@ibs.re.kr</div>
-      <div class="phone">042-878-8831</div>
-    </div>
-
-    <div class="card">
-      <div class="topleft"></div>
-
-      <img class="avatar" src="images/profile-image.svg">
-      <div class="name">Son, Changwook</div>
-      <div class="charge">Senior Enginner</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
-      <div class="location">Control Lab. Room 1</div>
-      <div class="email">scwook@ibs.re.kr</div>
-      <div class="phone">042-878-8831</div>
-    </div>
-
-    <div class="card">
-      <div class="topleft"></div>
-
-      <img class="avatar" src="images/scwook.png">
-      <div class="name">Son, Changwook</div>
-      <div class="charge">Senior Enginner</div>
-      <div class="task">Timing System</div>
-      <div class="task">Control Network Design</div>
+      <div class="name">Lee, SangIl</div>
+      <div class="title">Team Leader</div>
+      <div class="task">Interface Management</div>
+      <div class="task">Fast Protection System</div>
       <div class="location">
         <svg width="10" height="10">
           <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
@@ -92,20 +55,145 @@
       </div>
     </div>
 
+    <!-- Choi YongJun -->
     <div class="card">
       <div class="topleft"></div>
-
       <img class="avatar" src="images/profile-image.svg">
-      <div class="name">Son, Changwook</div>
-      <div class="charge">Senior Enginner</div>
+      <div class="name">Choi, YongJun</div>
+      <div class="title">Senior Enginner</div>
       <div class="task">Timing System</div>
       <div class="task">Control Network Design</div>
-      <div class="location">Control Lab. Room 1</div>
-      <div class="email">scwook@ibs.re.kr</div>
-      <div class="phone">042-878-8831</div>
+      <div class="location">
+        <svg width="10" height="10">
+          <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px;">Control Lab. Room 2</div>
+      </div>
+      <div class="email">
+        <svg width="10" height="7.5">
+          <path
+            d="M0,2.47V6.5055a1.0046,1.0046,0,0,0,1,1.009H9a1.0046,1.0046,0,0,0,1-1.009V2.47L5.5623,5.5143a.9924.9924,0,0,1-1.1246,0Z"
+            style="fill:#e6e6e6" />
+          <path
+            d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
+            style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+      </div>
+      <div class="phone">
+        <svg width="7" height="10">
+          <path
+            d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
+            transform="translate(0 0)" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left: 5px;">042-878-8831</div>
+      </div>
     </div>
 
-  </div>
+    <!-- Kim YongHak -->
+    <div class="card">
+      <div class="topleft"></div>
+      <img class="avatar" src="images/profile-image.svg">
+      <div class="name">Kim, YongHak</div>
+      <div class="title">Research Fellow</div>
+      <div class="task">Timing System</div>
+      <div class="task">Control Network Design</div>
+      <div class="location">
+        <svg width="10" height="10">
+          <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px;">Control Lab. Room 3</div>
+      </div>
+      <div class="email">
+        <svg width="10" height="7.5">
+          <path
+            d="M0,2.47V6.5055a1.0046,1.0046,0,0,0,1,1.009H9a1.0046,1.0046,0,0,0,1-1.009V2.47L5.5623,5.5143a.9924.9924,0,0,1-1.1246,0Z"
+            style="fill:#e6e6e6" />
+          <path
+            d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
+            style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+      </div>
+      <div class="phone">
+        <svg width="7" height="10">
+          <path
+            d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
+            transform="translate(0 0)" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left: 5px;">042-878-8831</div>
+      </div>
+    </div>
+
+    <!-- Son Changwook -->
+    <div class="card">
+      <div class="topleft"></div>
+      <img class="avatar" src="images/scwook.png">
+      <div class="name">Son, Changwook</div>
+      <div class="title">Senior Enginner</div>
+      <div class="task">Timing System</div>
+      <div class="task">Control System Infrastructure</div>
+      <div class="location">
+        <svg width="10" height="10">
+          <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px;">Control Lab. Room 4</div>
+      </div>
+      <div class="email">
+        <svg width="10" height="7.5">
+          <path
+            d="M0,2.47V6.5055a1.0046,1.0046,0,0,0,1,1.009H9a1.0046,1.0046,0,0,0,1-1.009V2.47L5.5623,5.5143a.9924.9924,0,0,1-1.1246,0Z"
+            style="fill:#e6e6e6" />
+          <path
+            d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
+            style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+      </div>
+      <div class="phone">
+        <svg width="7" height="10">
+          <path
+            d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
+            transform="translate(0 0)" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left: 5px;">042-878-8831</div>
+      </div>
+    </div>
+
+    <!-- Park MiJeong -->
+    <div class="card">
+      <div class="topleft"></div>
+      <img class="avatar" src="images/profile-image.svg">
+      <div class="name">Park, MiJeong</div>
+      <div class="title">Researcher</div>
+      <div class="task">Operator Interface</div>
+      <div class="task">Control System Infrastructure</div>
+      <div class="location">
+        <svg width="10" height="10">
+          <path id="rect861" d="M5.009.0064l-5,5.1142H1.4729v4.8858H8.5444V5.1206h1.4642Z" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px;">Control Lab. Room 5</div>
+      </div>
+      <div class="email">
+        <svg width="10" height="7.5">
+          <path
+            d="M0,2.47V6.5055a1.0046,1.0046,0,0,0,1,1.009H9a1.0046,1.0046,0,0,0,1-1.009V2.47L5.5623,5.5143a.9924.9924,0,0,1-1.1246,0Z"
+            style="fill:#e6e6e6" />
+          <path
+            d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
+            style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left:5px">mijoy0909@ibs.re.kr</div>
+      </div>
+      <div class="phone">
+        <svg width="7" height="10">
+          <path
+            d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
+            transform="translate(0 0)" style="fill:#e6e6e6" />
+        </svg>
+        <div style="margin-left: 5px;">042-878-8831</div>
+      </div>
+    </div>
 </body>
 
 </html>
