member profile image

--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -17,8 +17,7 @@
     Accelerator Control Team
   </div>
 
-  <div id="body" style="width:1920px; height:900px; display: flex;">
-    <!-- <div style="height:100px; background-color:aqua"></div> -->
+  <div id="body" style="margin:auto; width:1920px; height:900px; display: flex; justify-content: center; align-items: center;">
 
     <!-- Lee SangIl -->
     <div class="card">
@@ -43,7 +42,7 @@
             d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
             style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+        <div style="margin-left:5px">silee7103@ibs.re.kr</div>
       </div>
       <div class="phone">
         <svg width="7" height="10">
@@ -51,7 +50,7 @@
             d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
             transform="translate(0 0)" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left: 5px;">042-878-8831</div>
+        <div style="margin-left: 5px;">042-878-8854</div>
       </div>
     </div>
 
@@ -78,7 +77,7 @@
             d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
             style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+        <div style="margin-left:5px">yjchoi7203@ibs.re.kr</div>
       </div>
       <div class="phone">
         <svg width="7" height="10">
@@ -86,7 +85,7 @@
             d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
             transform="translate(0 0)" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left: 5px;">042-878-8831</div>
+        <div style="margin-left: 5px;">042-878-8889</div>
       </div>
     </div>
 
@@ -113,7 +112,7 @@
             d="M0,.62V.703a.6067.6067,0,0,0,.2626.5006L4.4377,4.0681a.9924.9924,0,0,0,1.1246,0L9.7374,1.2036A.6067.6067,0,0,0,10,.703V.62A.6027.6027,0,0,0,9.4.0145H.6A.6027.6027,0,0,0,0,.62Z"
             style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left:5px">scwook@ibs.re.kr</div>
+        <div style="margin-left:5px">yhkim@ibs.re.kr</div>
       </div>
       <div class="phone">
         <svg width="7" height="10">
@@ -121,7 +120,7 @@
             d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
             transform="translate(0 0)" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left: 5px;">042-878-8831</div>
+        <div style="margin-left: 5px;">042-878-8780</div>
       </div>
     </div>
 
@@ -191,7 +190,7 @@
             d="M5.2155,7.0986l-.001-.0018A1.06,1.06,0,0,1,3.7783,6.696L2.1621,3.8769A1.0753,1.0753,0,0,1,2.5355,2.424l-.001-.0018.1726-.1A.6714.6714,0,0,0,2.95,1.4082L2.3347.3345A.6617.6617,0,0,0,1.4274.09L.1583.8276C-.351,1.1237.4092,3.41,1.8563,5.9341s3.0331,4.33,3.5424,4.0341L6.6678,9.23a.6713.6713,0,0,0,.2431-.9136L6.2954,7.243a.6617.6617,0,0,0-.9073-.2448Z"
             transform="translate(0 0)" style="fill:#e6e6e6" />
         </svg>
-        <div style="margin-left: 5px;">042-878-8831</div>
+        <div style="margin-left: 5px;">042-878-8826</div>
       </div>
     </div>
 </body>
