--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -9,6 +9,13 @@
     <div class="center-top-box"><img src="images/center-top.svg"></img></div>
     <div class="raon-box"><img src="images/raon-white.svg"></img></div>
     <div class="accelerator-control">Accelerator Control</div>
+    <div id="menu">
+      <p>Monitoring</p>
+      <p>Schedule</p>
+      <p>Archive</p>
+      <p>Download</p>
+      <p>Document</p>
+    </div>
   </div>
 
   <div style="height:50px"></div>
