--- a/raon-control/downloads.html
+++ b/raon-control/downloads.html
@@ -1,193 +1,43 @@
 <!DOCTYPE html>
 <html>
-<style>
-    @font-face {
-        font-family: "Helvetica-Neue-Light";
-        src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
-    }
+<link rel="stylesheet" type="text/css" href="download.css">
 
-    @font-face {
-        font-family: "Roboto-Thin";
-        src: url(fonts/Roboto-Thin.ttf);
-    }
-
-    @font-face {
-        font-family: "Roboto-Light";
-        src: url(fonts/Roboto-Light.ttf);
-    }
-
-    @keyframes animateopacity {
-            from {
-                opacity: 0;
-                bottom: -50px;
-            }
-
-            to {
-                opacity: 1.0;        
-                bottom: 0px;
-            }
-        }
-
-    #time-stamp {
-        position: absolute;
-        color: white;
-        font-family: "Roboto-Thin";
-        font-size: 48px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -70%);
-    }
-
-    .under-line-box {
-        position: absolute;
-        top: 34px;
-    }
-
-    .center-top-box {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0%);
-    }
-
-    .raon-box {
-        position: absolute;
-        left: 10px;
-        top: 20px;
-    }
-
-    .accelerator-control {
-        position: absolute;
-        color: white;
-        width: 150px;
-        left: 150px;
-        top: 40px;
-        font-family: "Helvetica-Neue-Light";
-    }
-
-    .body-title {
-        width: 1920px;
-        height: 64px;
-        margin: auto;
-        background-color: black;
-        font-size: 40px;
-        text-align: center;
-        color: white;
-        font-family: Roboto-Light;
-    }
-
-    .body-box {
-        width: 1920px;
-        height: 960px;
-        background-color: black;
-        background-image: url('images/background-img.png');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center;
-        margin: auto;
-    }
-
-    .flex-box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* background-color: black; */
-        font-family: Roboto-Light;
-    }
-
-    .download-box {
-        position: relative;
-        bottom: -50px;
-        background-color: #3a3a3a9a;
-        opacity: 0;
-        width: 400px;
-        height: 540px;
-        margin: 50px;
-        color: white;
-        transition-duration: 0.4s;
-        animation: animateopacity 1s;
-        animation-fill-mode: forwards;
-    }
-
-    .download-box:hover {
-        background-color: #3a3a3ad8;
-    }
-
-    .download-title-img {
-        display: block;
-        width: 100px;
-        height: 100px;
-        margin: auto;
-        margin-top: 20px;
-        /* background-color: green; */
-    }
-
-    .download-title {
-        margin-top: 20px;
-        font-size: 32px;
-        text-align: center;
-    }
-
-    .download-comment {
-        margin-top: 10px;
-        font-size: 20px;
-        text-align: center;
-    }
-
-    .download-text {
-        margin-top: 100px;
-        font-size: 32px;
-        text-align: center;
-    }
-
-    .download-flex-box {
-        margin-top: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .download-os-box {
-        width: 100px;
-        height: 100px;
-        margin: 10px;
-        text-align: center;
-        line-height: 40px;
-        font-size: 30px;
-    }
-
-    .os-img {
-        width: 60px;
-        height: 60px;
-        /* background-color: blue; */
-    }
-
-    .os-text {
-        font-size: 18px;
-    }
-
-    .download-bottom-line {
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 10px;
-    }
-</style>
-
-<body style="background-color: black;">
+<body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
-        <div class="under-line-box"><img src="images/under-line.svg"></img></div>
-        <div class="center-top-box"><img src="images/center-top.svg"></img></div>
-        <div class="raon-box"><img src="images/raon-white.svg"></img></div>
-        <div class="accelerator-control">Accelerator Control</div>
+        <svg id="under-line" width="1920" height="42">
+            <style>
+                .under-line-style {
+                    fill: none;
+                    stroke: #f3f3f3;
+                    stroke-miterlimit: 10;
+                    stroke-width: 2px;
+                }
+            </style>
+            <polyline class="under-line-style" points="0 40 760 40 791 0" />
+            <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
+        </svg>
+        <svg id="center-top" width="400" height="80">
+            <path
+                d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
+                style="fill:#f3f3f3" />
+        </svg>
+        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
+        <div id="accelerator-control">Accelerator Control</div>
+        <div id="menu">
+            <a href="monitoring.html">Monitoring</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="archive.html">Archive</a>
+            <a href="downloads.html">Download</a>
+            <a href="documents.html">Document</a>
+        </div>
     </div>
 
-    <div style="height:20px"></div>
+    <div style="height:100px"></div>
 
-    <div class="body-title">Download for RAON Accelerator Control</div>
-    <div class="body-box">
-        <div style="height:60px"></div>
+    <div id="body-box">
         <div class="flex-box">
+
             <div class="download-box" style="animation-delay: 0.0s;">
                 <img class="download-title-img" src="images/css-logo.svg">
                 <div class="download-title">Control System Studio</div>
