--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -3,14 +3,35 @@
 <link rel="stylesheet" type="text/css" href="schedule.css">
 <script src="script/jquery.min.js"></script>
 
-
 <body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
-        <div class="under-line-box"><img src="images/under-line.svg"></img></div>
-        <div class="center-top-box"><img src="images/center-top.svg"></img></div>
-        <div class="raon-box"><img src="images/raon-white.svg"></img></div>
-        <div class="accelerator-control">Accelerator Control</div>
+        <svg id="under-line" width="1920" height="42">
+            <style>
+                .under-bar-style {
+                    fill: none;
+                    stroke: #f3f3f3;
+                    stroke-miterlimit: 10;
+                    stroke-width: 2px;
+                }
+            </style>
+            <polyline class="under-bar-style" points="0 40 760 40 791 0" />
+            <polyline class="under-bar-style" points="1920 40 1160 40 1129 0" />
+        </svg>
+        <svg id="center-top" width="400" height="80">
+            <path
+                d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
+                style="fill:#f3f3f3" />
+        </svg>
+        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
+        <div id="accelerator-control">Accelerator Control</div>
+        <div id="menu">
+            <a href="monitoring.html">Monitoring</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="archive.html">Archive</a>
+            <a href="downloads.html">Download</a>
+            <a href="documents.html">Document</a>
+        </div>
     </div>
 
     <div style="height:20px"></div>
@@ -183,7 +204,7 @@
             <div style="height:20px"></div>
 
             <div class="title-box" style="display: inline-block; width:50px;">Todo</div>
-            <div class="title-bar under-line" style="--barColor: #ec2227;"></div>
+            <div class="title-bar under-bar" style="--barColor: #ec2227;"></div>
 
             <div id="todo-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -201,7 +222,7 @@
         <!-- Right -->
         <div id="body-right">
             <div class="title-box" style="display: inline-block; width:50px;">Shift</div>
-            <div class="title-bar under-line" style="--barColor: #5D6D7E;"></div>
+            <div class="title-bar under-bar" style="--barColor: #5D6D7E;"></div>
 
             <table id="shift-table">
 
@@ -550,6 +571,54 @@
         }
     ];
 
+    function thisCalendar() {
+        // Remove this month schedule buttons
+        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+        for (let i = scheduleButtonClass.length - 1; i >= 0; i--) {
+            scheduleButtonClass[i].remove();
+        }
+
+        // Clear this month schedule list
+        var bodyCenterId = document.getElementById('body-center');
+        bodyCenterId.innerHTML = '';
+
+        // Clear shift list
+        var shiftAvatar = document.getElementsByClassName("avatar-img");
+        var shiftUserTable = document.getElementsByClassName("shift-user");
+        var shiftTeamTable = document.getElementsByClassName("team-name");
+        var shiftDesk = document.getElementsByClassName("desk-img");
+        for (let i = 0; i < 20; i++) {
+            shiftAvatar[i].src = '';
+            shiftUserTable[i].innerText = '';
+            shiftTeamTable[i].innerText = '';
+            shiftDesk[i].innerHTML = '';
+        }
+
+        // Create last month
+        today = new Date(today.getFullYear(), today.getMonth());
+        makeCalendar();
+
+        // Create schedule and shift list
+        getScheduleDatabase();
+        // makeSchedule();
+
+        // Show up first shift list
+        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+        if (scheduleButtonClass[0]) {
+            scheduleButtonClass[0].click();
+        }
+        else {
+            // Title under line animation re-trigger
+            var titleBarClass = document.getElementsByClassName('title-bar');
+
+            // 0: Todo under line, 1: Shift under line
+            titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
+            titleBarClass[1].classList.remove('under-bar');
+            titleBarClass[1].offsetWidth;
+            titleBarClass[1].classList.add('under-bar');
+        }
+    }
+
     function lastCalendar() {
 
         // Remove this month schedule buttons
@@ -593,9 +662,9 @@
 
             // 0: Todo under line, 1: Shift under line
             titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
-            titleBarClass[1].classList.remove('under-line');
+            titleBarClass[1].classList.remove('under-bar');
             titleBarClass[1].offsetWidth;
-            titleBarClass[1].classList.add('under-line');
+            titleBarClass[1].classList.add('under-bar');
         }
     }
 
@@ -644,9 +713,9 @@
 
             // 0: Todo under line, 1: Shift under line
             titleBarClass[1].style.setProperty('--barColor', '#5D6D7E');
-            titleBarClass[1].classList.remove('under-line');
+            titleBarClass[1].classList.remove('under-bar');
             titleBarClass[1].offsetWidth;
-            titleBarClass[1].classList.add('under-line');
+            titleBarClass[1].classList.add('under-bar');
         }
     }
 
@@ -985,9 +1054,9 @@
 
         // 0: Todo under line, 1: Shift under line
         titleBarClass[1].style.setProperty('--barColor', color);
-        titleBarClass[1].classList.remove('under-line');
+        titleBarClass[1].classList.remove('under-bar');
         titleBarClass[1].offsetWidth;
-        titleBarClass[1].classList.add('under-line');
+        titleBarClass[1].classList.add('under-bar');
     }
 
     // Clock
@@ -1001,7 +1070,7 @@
     window.onload = function () {
         var myVar = setInterval(timer, 1000);
 
-        makeCalendar();
+        thisCalendar() 
         // makeSchedule();
         // scheduleDetail();
         // shifterList(0, '#8E44AD');
