--- a/raon-control/downloads.html
+++ b/raon-control/downloads.html
@@ -99,6 +99,7 @@
                 <div class="download-bottom-line" style="background-color: rgb(40, 33, 145);"></div>
             </div>
         </div>
+    </div>
 </body>
 <script>
     function timer() {
