--- a/raon-control/server/inventory.html
+++ b/raon-control/server/inventory.html
@@ -5,7 +5,14 @@
 </body>
 
 <script>
-    data = {scwook:'20190619'};
+    data = {
+        assetNum:'20130617',
+        date:'2013-07-17',
+        deviceName:'iPad',
+        manager:'Son, Changwook',
+        location:'SCL2 Gallery',
+        fileName:'picture.jpg'
+    };
 
 	function getArchiveData() {
 		var xhttp = new XMLHttpRequest();
