--- a/raon-control/test/fileUpload.html
+++ b/raon-control/test/fileUpload.html
@@ -2,16 +2,10 @@
 <html>
 
 <body>
-
-    <h1>The input accept attribute</h1>
-
-    <form action="/action_page.php">
-        <label for="img">Select image:</label>
-        <input type="file" id="img" name="img" accept="image/*">
-        <input type="submit">
+    <form method=post enctype=multipart/form-data>
+        <input type=file name=file>
+        <input type=submit value=Upload>
     </form>
-
-    <p><strong>Note:</strong> Because of security issues, this example will not allow you to upload files.</p>
 
 </body>
 
