--- a/raon-control/test/fileUpload.html
+++ b/raon-control/test/fileUpload.html
@@ -2,11 +2,10 @@
 <html>
 
 <body>
-    <form method=post enctype=multipart/form-data>
+    <form method=post action="http://192.168.0.105:8080/" enctype=multipart/form-data>
         <input type=file name=file>
         <input type=submit value=Upload>
     </form>
 
 </body>
-
 </html>
