--- a/raon-control/test/inventory.html
+++ b/raon-control/test/inventory.html
@@ -35,45 +35,46 @@
 </style>
 
 <body>
-  <!--
-    <form method=post action="http://192.168.0.105:8080/" enctype=multipart/form-data>
-        <input type=file name=file>
-        <input type=submit value=Upload>
-    </form>
--->
+
 
   <div class="container">
-      <label>Asset Number</label>
-      <input type="text" id="asset-number" placeholder="ex) 20130619">
+    <label>Asset Number</label>
+    <input type="text" id="asset-number" placeholder="ex) 20130619">
 
-      <label>Date</label>
-      <input type="text" id="asset-date" placeholder="ex) 2013-06-19">
+    <label>Date</label>
+    <input type="text" id="asset-date" placeholder="ex) 2013-06-19">
 
-      <label>Device Name</label>
-      <input type="text" id="device-name" placeholder="">
+    <label>Device Name</label>
+    <input type="text" id="device-name" placeholder="">
 
-      <label>Manager</label>
-      <select id="asset-manager">
-        <option>이상일</option>
-        <option>최용준</option>
-        <option>김용학</option>
-        <option>손창욱</option>
-        <option>박미정</option>
-      </select>
+    <label>Manager</label>
+    <select id="asset-manager">
+      <option>이상일</option>
+      <option>최용준</option>
+      <option>김용학</option>
+      <option>손창욱</option>
+      <option>박미정</option>
+    </select>
 
-      <label>Location</label>
-      <select id="asset-location">
-        <option>SCL3 2층 갤러리</option>
-        <option>중앙제어센터</option>
-        <option>ISOL 지하 1층</option>
-      </select>
+    <label>Location</label>
+    <select id="asset-location">
+      <option>SCL3 2층 갤러리</option>
+      <option>중앙제어센터</option>
+      <option>ISOL 지하 1층</option>
+    </select>
 
-      <button id="save-button" onclick="test()">Save</button>
-    </div>
+    <button id="save-button" onclick="test()">Save</button>
+  </div>
+
+
+  <form method=post name="fileInfo" enctype=multipart/form-data>
+    <input type=file name=file>
+    <input type=submit value=Upload>
+  </form>
 
 
 
-    <form enctype="multipart/form-data" method="post" name="fileinfo">
+  <!-- <form enctype="multipart/form-data" method="post" name="fileinfo">
       <label>Your email address:</label>
       <input type="email" autocomplete="on" autofocus name="userid" placeholder="email" required size="32" maxlength="64" /><br />
       <label>Custom file label:</label>
@@ -81,21 +82,25 @@
       <label>File to stash:</label>
       <input type="file" name="file" required />
       <input type="submit" value="Stash the file!" />
-    </form>
-    <div></div>
+    </form> -->
 
+    <div id="output"></div>
+</body>
 
-    var form = document.forms.namedItem("fileinfo");
-form.addEventListener('submit', function(ev) {
+<script>
 
-  var oOutput = document.querySelector("div"),
-      oData = new FormData(form);
+  var form = document.forms.namedItem("fileInfo");
+  form.addEventListener('submit', function(ev) {
+  console.log('Upload');
 
-  oData.append("CustomField", "This is some extra data");
+  var oOutput = document.getElementById('output');
+  var oData = new FormData(form);
+
+  //oData.append("CustomField", "This is some extra data");
 
   var oReq = new XMLHttpRequest();
-  oReq.open("POST", "stash.php", true);
-  oReq.onload = function(oEvent) {
+  oReq.open("POST", "http://localhost:8080", true);
+  oReq.onload = function (oEvent) {
     if (oReq.status == 200) {
       oOutput.innerHTML = "Uploaded!";
     } else {
@@ -105,12 +110,8 @@ form.addEventListener('submit', function(ev) {
 
   oReq.send(oData);
   ev.preventDefault();
-}, false);
+  }, false);
 
-
-</body>
-
-<script>
   data = {
     assetNum: '20130617',
     date: '2013-07-17',
@@ -151,7 +152,7 @@ form.addEventListener('submit', function(ev) {
     var assetDeviceName = deviceNameID.value;
     var assetManager = managerListID.options[managerListID.selectedIndex].value;
     var assetLocation = locationID.options[locationID.selectedIndex].value;
-  
+
     //console.log('Asset Number : ', assetNumber);
     //console.log('Date : ', assetDate);
     //console.log('Device Name : ', assetDeviceName);
@@ -168,6 +169,8 @@ form.addEventListener('submit', function(ev) {
 
     getArchiveData();
   }
+
+
 
 
 </script>
