--- a/raon-control/test/inventory.html
+++ b/raon-control/test/inventory.html
@@ -39,13 +39,13 @@
 
   <div class="container">
     <label>Asset Number</label>
-    <input type="text" id="asset-number" placeholder="ex) 20130619">
+    <input type="text" id="asset-number" placeholder="ex) 20130619" value="19830619">
 
     <label>Date</label>
-    <input type="text" id="asset-date" placeholder="ex) 2013-06-19">
+    <input type="text" id="asset-date" placeholder="ex) 2013-06-19" value="1983-06-19">
 
     <label>Device Name</label>
-    <input type="text" id="device-name" placeholder="">
+    <input type="text" id="device-name" placeholder="" value="iPhone">
 
     <label>Manager</label>
     <select id="asset-manager">
@@ -63,14 +63,15 @@
       <option>ISOL 지하 1층</option>
     </select>
 
+    <form method=post name="fileInfo" enctype=multipart/form-data>
+      <input type=file name=file>
+    </form>
+
+    
     <button id="save-button" onclick="test()">Save</button>
   </div>
 
 
-  <form method=post name="fileInfo" enctype=multipart/form-data>
-    <input type=file name=file>
-    <input type=submit value=Upload>
-  </form>
 
 
 
@@ -84,33 +85,26 @@
       <input type="submit" value="Stash the file!" />
     </form> -->
 
-    <div id="output"></div>
+  <div id="output"></div>
 </body>
 
 <script>
+  function fileUpload() {
+    var fileForm = document.forms.namedItem("fileInfo");
+    var fileData = new FormData(fileForm);
 
-  var form = document.forms.namedItem("fileInfo");
-  form.addEventListener('submit', function(ev) {
-  console.log('Upload');
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function () {
+      if (this.readyState == 4 && this.status == 200) {
+        console.log(this.responseText);
+        console.log('upload success');
+      }
+    };
 
-  var oOutput = document.getElementById('output');
-  var oData = new FormData(form);
-
-  //oData.append("CustomField", "This is some extra data");
-
-  var oReq = new XMLHttpRequest();
-  oReq.open("POST", "http://localhost:8080", true);
-  oReq.onload = function (oEvent) {
-    if (oReq.status == 200) {
-      oOutput.innerHTML = "Uploaded!";
-    } else {
-      oOutput.innerHTML = "Error " + oReq.status + " occurred when trying to upload your file.<br \/>";
-    }
-  };
-
-  oReq.send(oData);
-  ev.preventDefault();
-  }, false);
+    var rName = "http://localhost:8080/inventory/upload";
+    xhttp.open("POST", rName, true);
+    xhttp.send(fileData);
+  }
 
   data = {
     assetNum: '20130617',
@@ -121,21 +115,29 @@
     fileName: 'picture.jpg'
   };
 
-  function getArchiveData() {
+  function setInventoryData() {
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function () {
       if (this.readyState == 4 && this.status == 200) {
-        var jsonValue = JSON.parse(this.responseText);
-        console.log(jsonValue);
+        if (this.responseText == 'success') {
+          fileUpload();
+        }
+        else {
+
+        }
+
+        console.log('return:', this.responseText);
+      }
+      else {
+        console.log(this.readyState, this.status);
       }
     };
 
-    var rName = "http://localhost:8080/inventory";
+    console.log('aaa');
+    var rName = "http://localhost:8080/inventory/insert";
     xhttp.open("POST", rName, true);
     xhttp.setRequestHeader('Content-Type', 'application/json');
     xhttp.send(JSON.stringify(data));
-    console.log(JSON.stringify(data));
-
   }
 
   //getArchiveData();
@@ -165,9 +167,9 @@
     data.manager = assetManager;
     data.location = assetLocation;
 
-    console.log(data);
+    console.log('send : ', data);
 
-    getArchiveData();
+    setInventoryData();
   }
 
 
