--- a/raon-control/test/inventory.html
+++ b/raon-control/test/inventory.html
@@ -58,9 +58,28 @@
 
     <label>Location</label>
     <select id="asset-location">
-      <option>SCL3 2층 갤러리</option>
-      <option>중앙제어센터</option>
-      <option>ISOL 지하 1층</option>
+      <option>중앙제어센터 1층 중앙제어실</option>
+      <option>중앙제어센터 1층 관람 및 회의실</option>
+      <option>중앙제어센터 1층 관람실</option>
+      <option>중앙제어센터 1층 서버실</option>
+      <option>중앙제어센터 1층 TPS</option>
+      <option>중앙제어센터 2층 제어실험실</option>
+      <option>중앙제어센터 2층 장비보관실</option>
+      <option>중앙제어센터 2층 연구실</option>
+      <option>가속기동 SCL3 터널</option>
+      <option>가속기동 SCL3 갤러리</option>
+      <option>가속기동 SCL2 터널</option>
+      <option>가속기동 SCL2 갤러리</option>
+      <option>가속기동 SCL 터널 굴절부</option>
+      <option>가속기동 SCL 터널 갤러리</option>
+      <option>가속기동 ISOL 지하 1층</option>
+      <option>가속기동 ISOL 1층</option>
+      <option>헬륨압축기동</option>
+      <option>극저온설비동</option>
+      <option>신동 SRF 시험동</option>
+      <option>신동 초전도 조립동</option>
+      <option>KAIST 문지캠퍼스 1층</option>
+      <option>KAIST 문지캠퍼스 2층</option>
     </select>
 
     <form method=post name="fileInfo" enctype=multipart/form-data>
