--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -112,9 +112,6 @@
 				</div> -->
 
 			</div>
-
-			<div class="swiper-pagination"></div>
-
 		</div>
 		<button onclick="test()">click</button>
 	</div>
@@ -170,14 +167,14 @@
 	}
 
 	var swiper = new Swiper('.swiper-container', {
-		pagination: {
-			el: '.swiper-pagination',
-			clickable: true,
-			renderBullet: function (index, className) {
-				// console.log(className, index);
-				return '<span class="' + className + '">' + (index + 1) + '</span>';
-			},
-		},
+		// pagination: {
+		// 	el: '.swiper-pagination',
+		// 	clickable: true,
+		// 	renderBullet: function (index, className) {
+		// 		// console.log(className, index);
+		// 		return '<span class="' + className + '">' + (index + 1) + '</span>';
+		// 	},
+		// },
 
 		effect: 'coverflow',
 		grabCursor: true,
