--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -8,9 +8,9 @@
 	.swiper-slide {
 		background-position: center;
 		background-size: cover;
-		width: 252px;
+		width: 600px;
 		height: 400px;
-		background-color: #fff;
+		/* background-color: #fff; */
 		box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
 		/* filter: blur(4px); */
 		/* background: #d1ebff; */
@@ -19,7 +19,7 @@
 
 	.swiper-slide-active {
 		filter: blur(0px);
-		background: #fff;
+		/* background: #fff; */
 	}
 
 	.swiper-container-3d .swiper-slide-shadow-left,
@@ -79,8 +79,8 @@
 
 	<div id="body" style="margin:auto; position:relative; width:1920px; height:900px;">
 		<div class="search-box">
-			<input type="text" id="input" placeholder="Process Variable">
-			<svg onclick="retrieveData()" style="position: absolute; left:1325px; top: 13px">
+			<input type="number" id="input" placeholder="Asset Number">
+			<svg onclick="searchData()" style="position: absolute; left:1325px; top: 13px">
 				<defs>
 					<style>
 						.cls-1 {
@@ -99,10 +99,8 @@
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
 				<!-- <div class="swiper-slide">
+					<div class="asset-image" style="background-image: url('images/1.JPG');"></div>
 					<div class="asset-container">
-						<div class='asset-image-container'>
-							<img src="images/1.JPG" class="asset-image">
-						</div>
 						<div class="asset-name">19인치 Rack (SHR-27SS)</div>
 						<div class="asset-location">신동3 중앙제어센터 1층 가속기제어팀</div>
 						<div class="asset-date">1983-06-19</div>
@@ -113,59 +111,62 @@
 
 			</div>
 		</div>
-		<button onclick="test()">click</button>
 	</div>
 </body>
 <script>
 	var swiperWrapperClass = document.getElementsByClassName('swiper-wrapper');
+	var count = 0;
+	var index = {};
 
 	for (let i = 0; i < 10; i++) {
+
+		var sampleAsset = count * 11;
 
 		var slideItemElem = document.createElement('DIV');
 		slideItemElem.classList.add('swiper-slide');
 
+		var assetImageElem = document.createElement('DIV');
+		assetImageElem.classList.add('asset-image');
+		// assetImageElem.style.backgroundImage = 'url("images/1.JPG")';
+
 		var assetContainerElem = document.createElement('DIV');
 		assetContainerElem.classList.add('asset-container');
 
-		var assetImageContainerElem = document.createElement('DIV');
-		assetImageContainerElem.classList.add('asset-image-container');
-
-		var assetImageElem = document.createElement('IMG');
-		var assetNameElem = document.createElement('DIV');
-		var assetLocationElem = document.createElement('DIV');
+		var assetNumberElem = document.createElement('DIV');
 		var assetDateElem = document.createElement('DIV');
 		var assetManagerElem = document.createElement('DIV');
-		var assetNumberElem = document.createElement('DIV');
+		var assetNameElem = document.createElement('DIV');
+		var assetLocationElem = document.createElement('DIV');
 
-		assetImageElem.classList.add('asset-image');
-		assetNameElem.classList.add('asset-name');
-		assetLocationElem.classList.add('asset-location');
+		assetNumberElem.classList.add('asset-number');
 		assetDateElem.classList.add('asset-date');
 		assetManagerElem.classList.add('asset-manager');
-		assetNumberElem.classList.add('asset-number');
+		assetNameElem.classList.add('asset-name');
+		assetLocationElem.classList.add('asset-location');
 
-		// assetNameElem.appendChild(document.createTextNode('aaaa'));
-		assetImageElem.src = 'images/1.JPG';
-		assetNameElem.innerText = "aaaaa";
-		assetLocationElem.innerText = "bbbbb";
-		assetDateElem.innerText = 'ccccc';
-		assetManagerElem.innerText = 'dddddd';
-		assetNumberElem.innerText = 'eeeeee';
+		assetNumberElem.innerText = sampleAsset;
+		assetDateElem.innerText = '2013-06-19';
+		assetManagerElem.innerText = 'CW';
+		assetNameElem.innerText = "19인치 Rack (SHR-27SS)";
+		assetLocationElem.innerText = "중앙제어센터 2층 제어실험실";
 
-		assetImageContainerElem.appendChild(assetImageElem);
-
-		assetContainerElem.appendChild(assetImageContainerElem);
-		assetContainerElem.appendChild(assetNameElem);
-		assetContainerElem.appendChild(assetLocationElem);
+		assetContainerElem.appendChild(assetNumberElem);
 		assetContainerElem.appendChild(assetDateElem);
 		assetContainerElem.appendChild(assetManagerElem);
-		assetContainerElem.appendChild(assetNumberElem);
+		assetContainerElem.appendChild(assetNameElem);
+		assetContainerElem.appendChild(assetLocationElem);
 
+		slideItemElem.appendChild(assetImageElem);
 		slideItemElem.appendChild(assetContainerElem);
 
 		swiperWrapperClass[0].appendChild(slideItemElem);
+
+		index[sampleAsset] = count;
+		count += 1;
+
 	}
 
+	console.log(index);
 	var swiper = new Swiper('.swiper-container', {
 		// pagination: {
 		// 	el: '.swiper-pagination',
@@ -182,17 +183,40 @@
 		slidesPerView: 'auto',
 		coverflowEffect: {
 			rotate: 0,
-			stretch: 0,
-			depth: 100,
-			modifier: 1,
+			stretch: -150,
+			depth: 200,
+			modifier: 2,
 			slideShadows: true,
 		},
 		// loop: true
 	});
 
-	function test() {
-		swiper.slideTo(5,500,false);
+	function searchData() {
+		var searchText = document.getElementById("input").value;
+		if (searchText.length) {
+			var assetNumber = document.getElementById('input').value;
+			var assetIndex = index[assetNumber];
+			if(assetIndex) {
+				swiper.slideTo(assetIndex, 500, false);
+			}
+			else {
+				alert("No Result");
+			}
+
+		}
+		else {
+			alert("No PVs have been specified.");
+		}
 	}
+
+	var input = document.getElementById("input");
+	input.addEventListener("keyup", function (event) {
+		if (event.keyCode === 13) {
+			event.preventDefault();
+			searchData();
+			// document.getElementById("button").click();
+		}
+	});
 </script>
 
 </html>
