--- a/raon-control/test/fileUpload.html
+++ b/raon-control/test/fileUpload.html
@@ -1,11 +1,145 @@
 <!DOCTYPE html>
 <html>
+<style>
+    #form-container {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+        padding-top: 60px;
+    }
+
+    input[type=text],
+    select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    #save-button {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    #save-button:hover {
+        background-color: #45a049;
+    }
+
+    #new-asset-container {
+        width: 400px;
+        height: 500px;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+</style>
 
 <body>
-    <form method=post action="http://192.168.0.105:8080/" enctype=multipart/form-data>
-        <input type=file name=file>
-        <input type=submit value=Upload>
+
+    <button onclick="document.getElementById('form-container').style.display='block'" style="width:auto;">New</button>
+
+    <form method=post name="fileInfo" enctype=multipart/form-data>
+
+        <div id="form-container">
+            <div id="new-asset-container">
+                <label>Asset Number</label>
+                <input type="text" id="asset-number" placeholder="ex) 20130619" name="assetNumber" value="19830619">
+
+                <label>Date</label>
+                <input type="text" id="asset-date" placeholder="ex) 2013-06-19" name="assetDate" value="1983-06-19">
+
+                <label>Device Name</label>
+                <input type="text" id="device-name" placeholder="" name="deviceName" value="iPhone">
+
+                <label>Manager</label>
+                <select id="asset-manager" name="assetManager">
+                    <option>이상일</option>
+                    <option>최용준</option>
+                    <option>김용학</option>
+                    <option>손창욱</option>
+                    <option>박미정</option>
+                </select>
+
+                <label>Location</label>
+                <select id="asset-location" name="assetLocation">
+                    <option>중앙제어센터 1층 중앙제어실</option>
+                    <option>중앙제어센터 1층 관람 및 회의실</option>
+                    <option>중앙제어센터 1층 관람실</option>
+                    <option>중앙제어센터 1층 서버실</option>
+                    <option>중앙제어센터 1층 TPS</option>
+                    <option>중앙제어센터 2층 제어실험실</option>
+                    <option>중앙제어센터 2층 장비보관실</option>
+                    <option>중앙제어센터 2층 연구실</option>
+                    <option>가속기동 SCL3 터널</option>
+                    <option>가속기동 SCL3 갤러리</option>
+                    <option>가속기동 SCL2 터널</option>
+                    <option>가속기동 SCL2 갤러리</option>
+                    <option>가속기동 SCL 터널 굴절부</option>
+                    <option>가속기동 SCL 터널 갤러리</option>
+                    <option>가속기동 ISOL 지하 1층</option>
+                    <option>가속기동 ISOL 1층</option>
+                    <option>헬륨압축기동</option>
+                    <option>극저온설비동</option>
+                    <option>신동 SRF 시험동</option>
+                    <option>신동 초전도 조립동</option>
+                    <option>KAIST 문지캠퍼스 1층</option>
+                    <option>KAIST 문지캠퍼스 2층</option>
+                </select>
+
+                <input type=file name=file>
     </form>
 
+
+    <button id="save-button" onclick="setInventoryData()">Save</button>
+    <button onclick="document.getElementById('form-container').style.display='none'">Cancel</button>
+    </div>
+    </div>
+
+
+    <div id="output"></div>
 </body>
+
+<script>
+    function setInventoryData() {
+        var formData = new FormData(document.forms.namedItem("fileInfo"));
+
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                if (this.responseText == 'success') {
+
+                }
+                else {
+
+                }
+
+                console.log('return:', this.responseText);
+            }
+            else {
+                console.log(this.readyState, this.status);
+            }
+        };
+
+        var rName = "http://localhost:8080";
+        xhttp.open("POST", rName, true);
+        xhttp.send(formData);
+    }
+</script>
+
 </html>
